--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,17 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
+# Build artifacts
+/dist
 /build
 
-# misc
-.DS_Store
-*.pem
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+
+# OS files
+.DS_Store
+
+# Environment files
 .env.local
 .env.*
 !.env.example
